[package]
name = "aether_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Direct3D12",
    "Win32_Foundation",
    "Win32_System_IO",
] }


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "aether_bench"
harness = false
